manifests/registry/overlay_multitenancy/lifecycle-hooks.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: apicurio-registry
spec:
  strategy:
    rollingParams:
      post:
        failurePolicy: Ignore
        execNewPod:
          containerName: apicurio-registry
          command:
            - "/bin/sh"
            - "-c"
            - "echo '{\"text\":\"\n*Operate First Deployment Alert - Registry*\n\n' > data.json && cat /work/meta/git.properties >> data.json && echo '\"}' >> data.json && curl -i $GOOGLE_CHAT_WEBHOOK -X POST -H 'Content-Type: application/json' --data-binary '@data.json'"
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: fleet-manager
spec:
  strategy:
    rollingParams:
      post:
        failurePolicy: Ignore
        execNewPod:
          containerName: fleet-manager
          command:
            - "/bin/sh"
            - "-c"
            - "curl -i $GOOGLE_CHAT_WEBHOOK -X POST -H 'Content-Type: application/json' --data '{\"text\":\"\n*Operate First Deployment Alert - Fleet Manager*\n\n\"}'"
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: apicurio-registry-mt-ui
spec:
  strategy:
    rollingParams:
      post:
        failurePolicy: Ignore
        execNewPod:
          containerName: apicurio-registry-mt-ui
          command:
            - "/bin/sh"
            - "-c"
            - "curl -i $GOOGLE_CHAT_WEBHOOK -X POST -H 'Content-Type: application/json' --data '{\"text\":\"\n*Operate First Deployment Alert - Registry UI mt*\n\n\"}'"
