manifests/registry/overlay_multitenancy/apicurio-envoy-route.yaml
# Routes
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-envoy
  labels:
    app: apicurio-registry
    template: apicurio-registry
spec:
  to:
    kind: Service
    name: apicurio-envoy
    weight: 100
  wildcardPolicy: None
