manifests/registry/overlay_multitenancy/fleet-manager.yaml


apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fleet-manager
    component: fleet-manager
  name: fleet-manager
spec:
  replicas: 1
  selector:
    component: fleet-manager
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        component: fleet-manager
      name: fleet-manager
    spec:
      volumes:
        - name: registry-deployments-config-file
          configMap:
            name: registry-deployments-config-file
        - name: registry-quota-plans-config
          configMap:
            name: registry-quota-plans-config
      containers:
      - image: fleet-manager:latest
        imagePullPolicy: Always
        name: fleet-manager
        ports:
          - name: web
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: registry-deployments-config-file
            mountPath: /config/registry-deployments.yaml
            subPath: registry-deployments.yaml
          - name: registry-quota-plans-config
            mountPath: /config/quota-plans.yaml
            subPath: quota-plans.yaml
        resources:
          limits:
            cpu: 100m
            memory: 600Mi
          requests:
            cpu: 100m
            memory: 600Mi
        terminationMessagePath: /dev/termination-log
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - fleet-manager
      from:
        kind: ImageStreamTag
        name: fleet-manager-mt:latest
    type: ImageChange

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fleet-manager
  name: fleet-manager
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fleet-manager
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fleet-manager
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: fleet-manager
spec:
  to:
    kind: Service
    #HEY workaround here!! because of using nameSuffix: '-mt' in Kustomize
    name: fleet-manager-mt
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
