manifests/registry/overlay_multitenancy/multitenant-ui.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: apicurio-registry-mt-ui
    component: apicurio-registry-mt-ui
  name: apicurio-registry-mt-ui
spec:
  replicas: 1
  selector:
    component: apicurio-registry-mt-ui
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Recreate
  template:
    metadata:
      labels:
        component: apicurio-registry-mt-ui
      name: apicurio-registry-mt-ui
    spec:
      containers:
      - image: apicurio-registry-mt-ui:latest
        name: apicurio-registry-mt-ui
        ports:
          - containerPort: 8080
            protocol: TCP
        # readinessProbe:
        #   tcpSocket:
        #     port: 5432
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # livenessProbe:
        #   tcpSocket:
        #     port: 5432
        #   initialDelaySeconds: 15
        #   periodSeconds: 20
        resources:
          limits:
            cpu: 200m
            memory: 875Mi
          requests:
            cpu: 200m
            memory: 875Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - apicurio-registry-mt-ui
      from:
        kind: ImageStreamTag
        name: apicurio-registry-mt-ui-mt:latest
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apicurio-registry-mt-ui
  name: apicurio-registry-mt-ui
spec:
  ports:
    - name: 8080-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    component: apicurio-registry-mt-ui
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-registry-mt-ui
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: apicurio-registry-mt-ui
    template: apicurio-registry-mt-ui
spec:
  to:
    kind: Service
    #HEY workaround here!! because of using nameSuffix: -mt
    name: apicurio-registry-mt-ui-mt
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
